docs: Fix header for 2.2.1 release notes
Version 2.2.1 is *not* LTS, thus fix the header.

Signed-off-by: Nicola Mazzucato <nicola.mazzucato@arm.com>
Change-Id: Ic4f14885b6d5ee33ec6b51be5a56afa8ff9acec3

--- a/docs/releases/2.2.1.rst
+++ b/docs/releases/2.2.1.rst
@@ -2,8 +2,8 @@
 Version 2.2.1
 *************
 
-LTS Support
-===========
+Features and hotfixes
+=====================
 
   - Build: Add optimisation flag build option
   - Adjustments to use MCUboot 2.2.0
