docs: Refactor design docs for dual-cpu
Condense, revise and remove boilerplate and redundancy for the dual-cpu,
mailbox and SPE-NSPE communication documents.

This is done after the design and implementation have consolidated over
time, but docs have not been updated and reorganized accordingly.

Signed-off-by: Nicola Mazzucato <nicola.mazzucato@arm.com>
Change-Id: Ib851402bd15f221519afc5eb0fe7e2e7949c063e

--- a/docs/releases/2.0.0.rst
+++ b/docs/releases/2.0.0.rst
@@ -11,7 +11,7 @@ New major features
     - Refer to :doc:`TF-M Build Instruction </building/tfm_build_instruction>` to build SPE image.
     - Refer to :doc:`Building Tests </building/tests_build_instruction>` to build non-secure tests.
 
-  - :doc:`Update new Mailbox agent API </design_docs/dual-cpu/mailbox_ns_agent_update>`.
+  - Update new Mailbox agent API.
 
     - Decouple the specific application Mailbox from SPM, make it an application in Secure Partition.
     - Unify the interfaces between partitions and SPM, and reduces the interaction interface between them.
